# Auto-Content-Creator

./: .gitignore  docker-compose.yml
backend/: .coveragerc  Dockerfile  __init__.py  app.py  manage.sh  pyproject.toml  requirements.txt
backend/core/: audiodownloader.py  downloader.py  videodownloader.py
backend/core/downloader/: audio_downloader.py  downloader.py  video_downloader.py
backend/dao/: crud.py  database.py  models.py  schema.py
backend/tasks/: task.py
backend/test/: test_video_downloader.py
backend/tests/: conftest.py  test_audio_downloader.py  test_video_downloader.py
